# xiaozhi_baidumap_mcp

./: README.md  pyproject.toml
src/xiaozhi_baidumap_mcp/: __init__.py  baidumap.py  mock.py
