[project]
name = "xiaozhi-baidumap-mcp"
version = "0.1.0"
description = "小智APP 百度导航MCP"
readme = "README.md"
authors = [
    { name = "ailearncoder", email = "panxuesen520@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.5.1",
    "xiaozhi-app>=0.1.0",
]

[project.scripts]
xiaozhi-baidumap-mcp = "xiaozhi_baidumap_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.mac.axyz.cc:30923/simple"

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi"
